--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matching Game</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
@@ -14,12 +15,18 @@
             <h1>Matching Game</h1>
         </header>
         <section class="score-panel">
-            <ul class="stars">
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
-                <li><i class="fa fa-star"></i></li>
-            </ul>
-            <span class="moves">X</span> Moves
+            <div>
+                <ul class="stars">
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                    <li><i class="fa fa-star"></i></li>
+                </ul>
+                <span class="moves">X</span> Moves
+            </div>
+            <div class="timer">
+                <span>0</span>
+                <span> Seconds</span>
+            </div>
             <div class="restart">
                 <i class="fa fa-repeat"></i>
             </div>
@@ -28,15 +35,12 @@
     </div>
     <div id="winner" class="popup">
         <div class="popup-content">
-            <span class="close">&times;</span>
+            <span class="close">×</span>
             <h2>Congratulations! You solved it!</h2>
             <p>With x moves and Y stars in Z seconds.</p>
             <button id="btnPlayAgain"><h3>Play Again</h3></button>
         </div>
     </div>
-    <!-- Start test-->
-    <button id="test">Modal winner</button>
-    <!-- End test-->
     <script src="js/app.js"></script>
 </body>
 </html>
